[ Backend ] - Modify & Handle Error : Job Service & User Serivce
